--- a/code_mac.ipynb
+++ b/code_mac.ipynb
@@ -2,20 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletionMessage(content=\"Sure, here's a light-hearted joke for you:\\n\\nWhy don't skeletons fight each other?\\n\\nThey don't have the guts!\", role='assistant', function_call=None, tool_calls=None)\n"
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting openai\n",
+      "  Obtaining dependency information for openai from https://files.pythonhosted.org/packages/16/35/10bb93c51c446370cf760ea0e722c78755bbe0572aeb4663bf8c19c9b082/openai-1.30.1-py3-none-any.whl.metadata\n",
+      "  Downloading openai-1.30.1-py3-none-any.whl.metadata (21 kB)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in c:\\users\\ep21158\\appdata\\roaming\\python\\python311\\site-packages (from openai) (4.0.0)\n",
+      "Collecting distro<2,>=1.7.0 (from openai)\n",
+      "  Obtaining dependency information for distro<2,>=1.7.0 from https://files.pythonhosted.org/packages/12/b3/231ffd4ab1fc9d679809f356cebee130ac7daa00d6d6f3206dd4fd137e9e/distro-1.9.0-py3-none-any.whl.metadata\n",
+      "  Downloading distro-1.9.0-py3-none-any.whl.metadata (6.8 kB)\n",
+      "Collecting httpx<1,>=0.23.0 (from openai)\n",
+      "  Obtaining dependency information for httpx<1,>=0.23.0 from https://files.pythonhosted.org/packages/41/7b/ddacf6dcebb42466abd03f368782142baa82e08fc0c1f8eaa05b4bae87d5/httpx-0.27.0-py3-none-any.whl.metadata\n",
+      "  Downloading httpx-0.27.0-py3-none-any.whl.metadata (7.2 kB)\n",
+      "Requirement already satisfied: pydantic<3,>=1.9.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from openai) (1.10.8)\n",
+      "Requirement already satisfied: sniffio in c:\\programdata\\anaconda3\\lib\\site-packages (from openai) (1.2.0)\n",
+      "Requirement already satisfied: tqdm>4 in c:\\programdata\\anaconda3\\lib\\site-packages (from openai) (4.65.0)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.7 in c:\\programdata\\anaconda3\\lib\\site-packages (from openai) (4.7.1)\n",
+      "Requirement already satisfied: idna>=2.8 in c:\\programdata\\anaconda3\\lib\\site-packages (from anyio<5,>=3.5.0->openai) (3.4)\n",
+      "Requirement already satisfied: certifi in c:\\programdata\\anaconda3\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (2024.2.2)\n",
+      "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai)\n",
+      "  Obtaining dependency information for httpcore==1.* from https://files.pythonhosted.org/packages/78/d4/e5d7e4f2174f8a4d63c8897d79eb8fe2503f7ecc03282fee1fa2719c2704/httpcore-1.0.5-py3-none-any.whl.metadata\n",
+      "  Downloading httpcore-1.0.5-py3-none-any.whl.metadata (20 kB)\n",
+      "Collecting h11<0.15,>=0.13 (from httpcore==1.*->httpx<1,>=0.23.0->openai)\n",
+      "  Obtaining dependency information for h11<0.15,>=0.13 from https://files.pythonhosted.org/packages/95/04/ff642e65ad6b90db43e668d70ffb6736436c7ce41fcc549f4e9472234127/h11-0.14.0-py3-none-any.whl.metadata\n",
+      "  Downloading h11-0.14.0-py3-none-any.whl.metadata (8.2 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\ep21158\\appdata\\roaming\\python\\python311\\site-packages (from tqdm>4->openai) (0.4.6)\n",
+      "Downloading openai-1.30.1-py3-none-any.whl (320 kB)\n",
+      "   ---------------------------------------- 0.0/320.6 kB ? eta -:--:--\n",
+      "   --- ------------------------------------ 30.7/320.6 kB 1.3 MB/s eta 0:00:01\n",
+      "   --------- ----------------------------- 81.9/320.6 kB 919.0 kB/s eta 0:00:01\n",
+      "   -------------------- ------------------- 163.8/320.6 kB 1.2 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 297.0/320.6 kB 1.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 320.6/320.6 kB 1.7 MB/s eta 0:00:00\n",
+      "Downloading distro-1.9.0-py3-none-any.whl (20 kB)\n",
+      "Downloading httpx-0.27.0-py3-none-any.whl (75 kB)\n",
+      "   ---------------------------------------- 0.0/75.6 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 75.6/75.6 kB 4.4 MB/s eta 0:00:00\n",
+      "Downloading httpcore-1.0.5-py3-none-any.whl (77 kB)\n",
+      "   ---------------------------------------- 0.0/77.9 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 77.9/77.9 kB ? eta 0:00:00\n",
+      "Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
+      "   ---------------------------------------- 0.0/58.3 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 58.3/58.3 kB 3.2 MB/s eta 0:00:00\n",
+      "Installing collected packages: h11, distro, httpcore, httpx, openai\n",
+      "Successfully installed distro-1.9.0 h11-0.14.0 httpcore-1.0.5 httpx-0.27.0 openai-1.30.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: The script distro.exe is installed in 'C:\\Users\\ep21158\\AppData\\Roaming\\Python\\Python311\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "  WARNING: The script httpx.exe is installed in 'C:\\Users\\ep21158\\AppData\\Roaming\\Python\\Python311\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "  WARNING: The script openai.exe is installed in 'C:\\Users\\ep21158\\AppData\\Roaming\\Python\\Python311\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "openai_key = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ChatCompletionMessage(content=\"Sure, here's one for you:\\n\\nWhy don't skeletons fight each other?\\n\\nThey don't have the guts.\", role='assistant', function_call=None, tool_calls=None)\n"
      ]
     }
    ],
    "source": [
     "from openai import OpenAI\n",
-    "client = OpenAI(api_key=\"\")\n",
+    "client = OpenAI(api_key=openai_key)\n",
     "\n",
     "completion = client.chat.completions.create(\n",
     "    model = 'gpt-4o',\n",
@@ -44,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
